fixed overlapping issue on hourly, 5-day, 10-day, weekend for right-to-left languages

--- a/styles/core.css
+++ b/styles/core.css
@@ -19,9 +19,9 @@ html {
 
 body {
   display: -webkit-box;
-  display: -webkit-flex;
+  /*display: -webkit-flex;*//*REMOVING THESE TWO FLEX PROPERTIES FIXES HEADER/FOOTER PROBLEM*/
   display: -ms-flexbox;
-  display: flex;
+  /*display: flex;*/
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
